client-code gen
