# client-code-gen/gen/app-access-control-api/model/ext-user-role-metadata-response-schema.ts
@@ -1,0 +1,50 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Forest Access Management - FAM - API
+ *  Forest Access Management API used by the Forest Access Management application to Define who has access to what apps, and what roles they will operate under  once access is granted. 
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * Contact: SIBIFSAF@victoria1.gov.bc.ca
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+// May contain unused imports in some cases
+// @ts-ignore
+import { ExtUserRoleMetadataRoleSchema } from './ext-user-role-metadata-role-schema';
+// May contain unused imports in some cases
+// @ts-ignore
+import { IDPType } from './idptype';
+
+/**
+ * Response schema for /me/role-metadata endpoint. Returns the current JWT user\'s roles and their expiry metadata scoped to the requesting application.
+ * @export
+ * @interface ExtUserRoleMetadataResponseSchema
+ */
+export interface ExtUserRoleMetadataResponseSchema {
+    /**
+     * The authenticated user\'s username (e.g., \'JSMITH\')
+     * @type {string}
+     * @memberof ExtUserRoleMetadataResponseSchema
+     */
+    'user_name': string;
+    /**
+     * 
+     * @type {IDPType}
+     * @memberof ExtUserRoleMetadataResponseSchema
+     */
+    'domain': IDPType;
+    /**
+     * List of roles assigned to the user in the application context. Empty list if no roles.
+     * @type {Array<ExtUserRoleMetadataRoleSchema>}
+     * @memberof ExtUserRoleMetadataResponseSchema
+     */
+    'roles'?: Array<ExtUserRoleMetadataRoleSchema>;
+}
+
+
+
