# client-code-gen/gen/app-access-control-api/model/ext-user-role-metadata-role-schema.ts
@@ -1,0 +1,48 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Forest Access Management - FAM - API
+ *  Forest Access Management API used by the Forest Access Management application to Define who has access to what apps, and what roles they will operate under  once access is granted. 
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * Contact: SIBIFSAF@victoria1.gov.bc.ca
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+
+/**
+ * Schema for a single role in the user role metadata response. Represents a role assigned to a user with its expiry date and optional forest client association.
+ * @export
+ * @interface ExtUserRoleMetadataRoleSchema
+ */
+export interface ExtUserRoleMetadataRoleSchema {
+    /**
+     * The role name code (e.g., \'FOM_REVIEWER\', \'SILVA_ADMIN\')
+     * @type {string}
+     * @memberof ExtUserRoleMetadataRoleSchema
+     */
+    'role_name': string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExtUserRoleMetadataRoleSchema
+     */
+    'display_name'?: string | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExtUserRoleMetadataRoleSchema
+     */
+    'expiry_date'?: string | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExtUserRoleMetadataRoleSchema
+     */
+    'forest_client_number'?: string | null;
+}
+
